apps/infrastructure/networking/gateway/gw-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-external
  namespace: gateway
spec:
  addresses:
  - type: IPAddress
    value: 192.168.1.102
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.starbasestudio.uk"
      allowedRoutes:
        namespaces:
          from: All
