apps/infrastructure/networking/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  addresses:
  - type: IPAddress
    value: 192.168.1.101
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.starbasestudio.uk"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "argocd.starbasestudio.uk"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: argocd-tls-secret
      allowedRoutes:
        namespaces:
          from: All
